# hawkfish

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  container.yml  helm-charts.yaml  persona-interop.yml  redfish-validator.yml  release.yaml
charts/: README.md
charts/hawkfish/: Chart.yaml
charts/hawkfish/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml
charts/hawkfish/templates/tests/: test-connection.yaml
deploy/compose/: README.md  docker-compose.yml  hawkfish.env.example
deploy/docker/: Dockerfile  entrypoint.sh
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/templates/: deployment.yaml  ingress.yaml  networkpolicy.yaml  pdb.yaml  pvc.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml  vpa.yaml
deploy/systemd/: hawkfish.service
docs/: README.md  architecture.md  automation.md  batch.md  conformance.md  console.md  deploy.md  events-durability.md  events.md  getting-started.md  hosts.md  images.md  import.md  kubernetes.md  migration.md  network-profiles.md  ops.md  orchestrator.md  persona-idrac.md  persona-ilo.md  personas.md  profiles.md  quickstart.md  redfish-coverage.md  release-notes-0.1.0.md  release-notes-0.4.0.md  release-notes-0.5.0.md  release-notes-0.7.0.md  release-notes-0.8.0.md  requirements.md  scale-performance.md  snapshots.md  storage-pools.md  systems.md  tasks.md  tenancy.md  ui.md
examples/: README.md  basic_operations.py  persona_example.py  system_lifecycle.py
examples/ansible/: README.md  inventory  playbook.yml
examples/idrac/: idrac_virtual_media_example.sh
examples/ilo/: ilo_bios_workflow.py  ilo_virtual_media_example.sh
examples/kubernetes/: README.md  basic-values.yaml  ingress-nginx.yaml  monitoring.yaml  production-values.yaml
examples/sdk/: python_client.py
examples/terraform/: README.md  main.tf  variables.tf
green_ci_env/: pyvenv.cfg
scripts/: generate_openapi.py
src/hawkfish_cli/: __main__.py
src/hawkfish_controller/: __init__.py  __main__.py  config.py  main_app.py  middleware.py  rate_limit.py
src/hawkfish_controller/api/: audit.py  batch.py  chassis.py  console.py  errors.py  hosts.py  images.py  import_adopt.py  ipxe.py  managers.py  migration.py  netprofiles.py  orchestrator.py  persona.py  profiles.py  projects.py  security.py  service_root.py  sessions.py  snapshots.py  storage.py  systems.py  task_event.py  update_service.py
src/hawkfish_controller/drivers/: fake_driver.py  libvirt_driver.py
src/hawkfish_controller/middleware/: __init__.py  metrics_logging.py  rate_limit.py
src/hawkfish_controller/models/: redfish.py
src/hawkfish_controller/persona/: __init__.py  base.py  dell_idrac9.py  hpe_ilo5.py  registry.py
src/hawkfish_controller/services/: adoption.py  audit.py  backup.py  bios.py  console.py  console_proxy.py  events.py  hosts.py  images.py  libvirt_pool.py  message_registry.py  metrics.py  migration.py  netprofiles.py  orchestrator.py  persona.py  persona_metrics.py  profiles.py  projects.py  rate_limit.py  security.py  sessions.py  snapshots.py  storage.py  tasks.py  tls.py  users.py
tests/e2e/: test_flow.py
tests/integration/: test_event_webhook.py  test_virtualmedia_tasks.py
tests/interop/idrac/: __init__.py  conftest.py  idrac_interop_profile.json  test_virtual_media_flow.py
tests/interop/ilo/: __init__.py  conftest.py  ilo_interop_profile.json  test_bios_flow.py  test_power_events_flow.py  test_virtual_media_flow.py
tests/performance/: test_load.py
tests/unit/: test_persona.py  test_service_root.py  test_sessions.py  test_systems.py
ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx
ui/src/components/: Dashboard.tsx  EventsPanel.tsx  Login.tsx  SystemDetail.tsx  SystemsList.tsx
ui/src/types/: index.ts
ui/src/utils/: api.ts
