[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "hawkfish"
version = "0.8.0"
description = "HawkFish: Redfish controller for KVM/libvirt"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
  {name = "HawkFish Authors", email = "maintainers@hawkfish.local"}
]
keywords = ["redfish", "libvirt", "kvm", "fastapi", "virtualization"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Framework :: FastAPI",
  "Topic :: System :: Systems Administration",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic>=2.5.0",
  "pydantic-settings>=2.2.0",
  "structlog>=24.1.0",
  "aiosqlite>=0.19.0",
  "argon2-cffi>=23.1.0",
  "prometheus-client>=0.20.0",
  "cryptography>=42.0.0",
  "jsonschema>=4.23.0",
  "types-jsonschema>=4.23.0.20240712",
  "httpx>=0.27.0",
  "typer>=0.9.0",
  "anyio>=4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=4.0.0",
  "httpx>=0.27.0",
  "ruff>=0.4.0",
  "mypy>=1.8.0",
  "types-requests",
  "typer",
]
virt = [
  # Optional at install time; required only on hosts that run against libvirt
  "libvirt-python>=9.0.0",
]

[project.scripts]
hawkfish-controller = "hawkfish_controller.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hawkfish_controller", "src/hawkfish_cli"]

[tool.ruff]
line-length = 100
target-version = "py311"
lint.extend-select = ["I", "UP", "B", "C4", "SIM", "N", "S"]
lint.ignore = ["S101", "B008", "S501", "B904", "S110", "S608", "F401", "UP035", "UP006", "I001", "SIM105", "SIM117", "SIM102", "C420", "B007", "S202"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
strict = false
ignore_missing_imports = true
disable_error_code = ["attr-defined", "arg-type", "call-arg", "index", "assignment", "no-any-return", "var-annotated", "has-type", "truthy-function"]
plugins = []

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]


